--- a/.github/workflows/commit-msg-to-pr.yml
+++ b/.github/workflows/commit-msg-to-pr.yml
@@ -158,7 +158,7 @@ jobs:
           # 🤖 AI 요약
           ${NEW_AI_SUMMARY}
           
-          ${AFTER_AI_SUMMARY}"
+          ${AFTER_AI_SUMMARY}ㅏㅏ"
 
           # PR 설명 업데이트
           gh pr edit ${{ github.event.pull_request.number }} --repo ${{ github.repository }} --body "$UPDATED_DESCRIPTION"
