--- a/.github/workflows/commit-msg-to-pr.yml
+++ b/.github/workflows/commit-msg-to-pr.yml
@@ -48,6 +48,7 @@ jobs:
         run: |
           # 커밋 메시지를 추출합니다.
           commit_messages=$(git log --reverse --format='%B%n%n' origin/${{ github.base_ref }}..origin/${{ github.head_ref }})
+          echo "$commit_messages"
           
           # Markdown 형식으로 포맷팅합니다.
           formatted_messages=""
