--- a/.github/workflows/commit-msg-to-pr.yml
+++ b/.github/workflows/commit-msg-to-pr.yml
@@ -52,7 +52,7 @@ jobs:
           
           # Markdown 형식으로 포맷팅합니다.
           formatted_messages=""
-          IFS=$'\n----------' # 커밋 메시지들을 분리하는 구분자를 설정합니다.
+          IFS=$'\n----------\n' # 커밋 메시지들을 분리하는 구분자를 설정합니다.
           for message in $commit_messages; do
             # 커밋 메시지의 첫 줄(제목)을 추출합니다.
             title=$(echo "$message" | head -n 1)
@@ -60,7 +60,9 @@ jobs:
             body=$(echo "$message" | tail -n +2)
             
             # Markdown 형식으로 포맷팅합니다.
-            if [ ! -z "$body" ]; then
+            if [ ! -z "$title" ]; then
+              pass
+            elif [ ! -z "$body" ]; then
               formatted_messages+="- **$title**  %0A> $body%0A%0A"
             else
               formatted_messages+="- **$title**%0A%0A"
