--- a/.github/workflows/commit-msg-to-pr.yml
+++ b/.github/workflows/commit-msg-to-pr.yml
@@ -52,7 +52,7 @@ jobs:
           
           # Markdown 형식으로 포맷팅합니다.
           formatted_messages=""
-          IFS=$'\n----------\n' # 커밋 메시지들을 분리하는 구분자를 설정합니다.
+          IFS='\n----------' # 커밋 메시지들을 분리하는 구분자를 설정합니다.
           for message in $commit_messages; do
             # 커밋 메시지의 첫 줄(제목)을 추출합니다.
             title=$(echo "$message" | head -n 1)
