--- a/.github/workflows/commit-msg-to-pr.yml
+++ b/.github/workflows/commit-msg-to-pr.yml
@@ -59,10 +59,12 @@ jobs:
             # 커밋 메시지의 나머지 부분(본문)을 추출합니다.
             body=$(echo "$message" | tail -n +2)
             
-            # Markdown 형식으로 포맷팅합니다.
-            if [ ! -z "$title" ]; then
+            if [ -z "$title" ]; then
               continue
-            elif [ ! -z "$body" ]; then
+            fi
+            
+            # Markdown 형식으로 포맷팅합니다.
+            if [ ! -z "$body" ]; then
               formatted_messages+="- **$title**  %0A> $body%0A%0A"
             else
               formatted_messages+="- **$title**%0A%0A"
