--- a/.github/workflows/commit-msg-to-pr.yml
+++ b/.github/workflows/commit-msg-to-pr.yml
@@ -47,7 +47,7 @@ jobs:
         id: get-commit-messages
         run: |
           # 커밋 메시지를 추출합니다.
-          commit_messages=$(git log --reverse --format='%B%n----------' origin/${{ github.base_ref }}..origin/${{ github.head_ref }})
+          commit_messages=$(git log --reverse --format='%B----------' origin/${{ github.base_ref }}..origin/${{ github.head_ref }})
           echo "$commit_messages"
           
           # Markdown 형식으로 포맷팅합니다.
