--- a/.github/workflows/commit-msg-to-pr.yml
+++ b/.github/workflows/commit-msg-to-pr.yml
@@ -58,6 +58,9 @@ jobs:
             title=$(echo "$message" | head -n 1)
             # 커밋 메시지의 나머지 부분(본문)을 추출합니다.
             body=$(echo "$message" | tail -n +2)
+
+            title_trimmed=$(echo "$title" | xargs)
+            body_trimmed=$(echo "$body" | xargs)
             
             if [ -z "$title" ]; then
               continue
@@ -65,9 +68,9 @@ jobs:
             
             # Markdown 형식으로 포맷팅합니다.
             if [ ! -z "$body" ]; then
-              formatted_messages+="- **$title**  %0A> $body%0A%0A"
+              formatted_messages+="- **$title_trimmed**  %0A> $body_trimmed%0A%0A"
             else
-              formatted_messages+="- **$title**%0A%0A"
+              formatted_messages+="- **$title_trimmed**%0A%0A"
             fi
           done
 
