--- a/.github/workflows/commit-msg-to-pr.yml
+++ b/.github/workflows/commit-msg-to-pr.yml
@@ -16,18 +16,19 @@ jobs:
       - name: Get Commit Messages
         id: get-commit-messages
         run: |
-          # 커밋 메시지를 추출합니다.
           commit_messages=$(git log --reverse --format='%B%n----------' origin/${{ github.base_ref }}..origin/${{ github.head_ref }})
           echo "$commit_messages"
           
           # Markdown 형식으로 포맷팅합니다.
           formatted_messages=""
-          IFS=$'\n----------' # 커밋 메시지들을 분리하는 구분자를 설정합니다.
+          IFS=$'\n----------' 
           for message in $commit_messages; do
-            # 커밋 메시지의 첫 줄(제목)을 추출합니다.
             title=$(echo "$message" | head -n 1)
-            # 커밋 메시지의 나머지 부분(본문)을 추출합니다.
             body=$(echo "$message" | tail -n +2)
+
+            echo "Message: ${message}"
+            echo "Title: ${title}"
+            echo "Body: ${body}"
 
             title_trimmed=$(echo "$title" | xargs)
             body_trimmed=$(echo "$body" | xargs)
@@ -36,7 +37,6 @@ jobs:
               continue
             fi
             
-            # Markdown 형식으로 포맷팅합니다.
             if [ ! -z "$body" ]; then
               formatted_messages+="- **$title_trimmed**  %0A> $body_trimmed%0A%0A"
             else
