--- a/.github/workflows/commit-msg-to-pr.yml
+++ b/.github/workflows/commit-msg-to-pr.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Get Commit Messages
         id: get-commit-messages
         run: |
-          commit_messages=$(git log --reverse --format='%s%n%n%b%n----------%n' origin/${{ github.base_ref }}..origin/${{ github.head_ref }})
+          commit_messages=$(git log --reverse --format='%n%s%n%n%b%n----------' origin/${{ github.base_ref }}..origin/${{ github.head_ref }})
           echo "$commit_messages"
           
           # Markdown 형식으로 포맷팅합니다.
