--- a/.github/workflows/commit-msg-to-pr.yml
+++ b/.github/workflows/commit-msg-to-pr.yml
@@ -57,7 +57,7 @@ jobs:
           
           # Markdown 형식으로 포맷팅합니다.
           formatted_messages=""
-          IFS=$'----------\n' 
+          IFS=$'----------' 
           for message in $commit_messages; do
             title=$(echo "$message" | head -n 1)
             body=$(echo "$message" | tail -n +2)
