--- a/.github/workflows/commit-msg-to-pr.yml
+++ b/.github/workflows/commit-msg-to-pr.yml
@@ -16,12 +16,12 @@ jobs:
       - name: Get Commit Messages
         id: get-commit-messages
         run: |
-          commit_messages=$(git log --reverse --format='%s%n%n%b%n----------' origin/${{ github.base_ref }}..origin/${{ github.head_ref }})
+          commit_messages=$(git log --reverse --format='%s%n%n%b%n₩₩₩₩₩' origin/${{ github.base_ref }}..origin/${{ github.head_ref }})
           echo "$commit_messages"
           
           # Markdown 형식으로 포맷팅합니다.
           formatted_messages=""
-          IFS=$'----------' 
+          IFS=$'₩₩₩₩₩' 
           for message in $commit_messages; do
             message=$(echo "$message" | sed '/^$/d')
             title=$(echo "$message" | head -n 1)
@@ -68,7 +68,7 @@ jobs:
               },
               {
                 "role": "user",
-                "content": "다음은 GitHub에서의 최근 커밋 메시지들입니다. 각 커밋의 제목과 본문을 요약하고, 전체적인 변경 사항에 대한 개요를 제공해주세요. 커밋 메시지 당 숫자로 구분합니다. MD 파일 양식에 맞게, 각 커밋의 제목은 볼드(**)로 표시하고, 본문은 인용구(>)로 표시합니다. 커밋 메시지들은 다음과 같습니다:\n${{ steps.get-commit-messages.outputs.messages }}"
+                "content": "다음은 GitHub에서의 최근 커밋 메시지들입니다. 각 커밋의 제목과 본문을 요약하고, 전체적인 변경 사항에 대한 개요를 첫 줄에 제공해주세요. 전체적인 변경 사항 내용은 코드블록(```)에 표시합니다. 커밋 메시지 당 숫자로 구분합니다. MD 파일 양식에 맞게, 각 커밋의 제목은 볼드(**)로 표시하고, 본문은 인용구(>)로 표시합니다. 커밋 메시지들은 다음과 같습니다:\n${{ steps.get-commit-messages.outputs.messages }}"
               }
             ],
             "temperature": 0.7,
