--- a/.github/workflows/commit-msg-to-pr.yml
+++ b/.github/workflows/commit-msg-to-pr.yml
@@ -67,8 +67,8 @@ jobs:
                 "content": "You are a helpful assistant."
               },
               {
-                "role": "user",
-                "content": "다음은 GitHub에서의 최근 커밋 메시지들입니다. 각 커밋의 제목과 본문을 요약하고, 커밋 메시지 당 숫자로 구분합니다. MD 파일 양식에 맞게, 각 커밋의 제목은 볼드(**)로 표시하고, 본문은 인용구(>)로 표시합니다. 커밋 메시지들은 다음과 같습니다:\n${{ steps.get-commit-messages.outputs.messages }}"
+                "role": "user",                
+                "content": "다음은 최근 GitHub 풀 리퀘스트에 포함된 커밋 메시지들입니다. 이 변경 이력을 바탕으로, 코드 리뷰어들이 변경 사항의 목적과 중요한 포인트를 쉽게 이해할 수 있도록 요약해주세요. 각 커밋의 주요 내용을 간략하게 설명하고, 변경 사항이 프로젝트에 미치는 영향에 대해 논의해주세요. 또한, 리뷰어들이 특히 주의 깊게 살펴봐야 할 부분이 있다면, 그 부분에 대해 강조해주세요. 커밋 메시지들은 다음과 같습니다:\n${{ steps.get-commit-messages.outputs.messages }} \n\n이 정보를 바탕으로, 코드 리뷰 프로세스를 개선하고, 리뷰어들이 변경 사항의 맥락을 더 잘 이해할 수 있도록 도와주세요."
               }
             ],
             "temperature": 0.7,
