--- a/.github/workflows/commit-msg-to-pr.yml
+++ b/.github/workflows/commit-msg-to-pr.yml
@@ -41,7 +41,7 @@ jobs:
             fi
             
             if [ ! -z "$body" ]; then
-              formatted_messages+="- **$title_trimmed**  %0A> $body_trimmed%0A%0A >"
+              formatted_messages+="- **$title_trimmed**  %0A> $body_trimmed%0A> %0A"
             else
               formatted_messages+="- **$title_trimmed**%0A%0A"
             fi
