--- a/.github/workflows/commit-msg-to-pr.yml
+++ b/.github/workflows/commit-msg-to-pr.yml
@@ -16,12 +16,12 @@ jobs:
       - name: Get Commit Messages
         id: get-commit-messages
         run: |
-          commit_messages=$(git log --reverse --format='%s%n%n%b%n₩₩₩₩₩' origin/${{ github.base_ref }}..origin/${{ github.head_ref }})
+          commit_messages=$(git log --reverse --format='%s%n%n%b%n₩₩₩' origin/${{ github.base_ref }}..origin/${{ github.head_ref }})
           echo "$commit_messages"
           
           # Markdown 형식으로 포맷팅합니다.
           formatted_messages=""
-          IFS=$'₩₩₩₩₩' 
+          IFS=$'₩₩₩' 
           for message in $commit_messages; do
             message=$(echo "$message" | sed '/^$/d')
             title=$(echo "$message" | head -n 1)
@@ -33,16 +33,13 @@ jobs:
 
             title_trimmed=$(echo "$title" | xargs)
             body_trimmed=$(echo "$body" | xargs)
-            # body_trimmed="${body_trimmed//$'n'/'%0A> '}"
-            body_trimmed="${body_trimmed//'-'/'> - '}"
-            body_trimmed=$(echo "$body_trimmed" | sed '/^> /!s/^/> /')
-                        
+          
             if [ -z "$title" ]; then
               continue
             fi
-            
+          
             if [ ! -z "$body" ]; then
-              formatted_messages+="- **$title_trimmed**  %0A $body_trimmed%0A%0A"
+              formatted_messages+="- **$title_trimmed**  %0A> $body_trimmed%0A%0A"
             else
               formatted_messages+="- **$title_trimmed**%0A%0A"
             fi
@@ -55,7 +52,7 @@ jobs:
           formatted_messages="${formatted_messages//$'\r'/'%0D'}"
           echo "::set-output name=messages::$formatted_messages"
 
-        
+
       - name: Ask ChatGPT for Summary
         id: chatgpt
         env:
@@ -67,18 +64,18 @@ jobs:
             "messages": [
               {
                 "role": "system",
-                "content": "You are a helpful assistant."
+                "content": "You are a helpful assistant and a specialist of github and software."
               },
               {
-                "role": "user",                
+                "role": "user",
                 "content": "다음은 최근 GitHub 풀 리퀘스트에 포함된 커밋 메시지들입니다. 이 변경 이력을 바탕으로, 코드 리뷰어들이 변경 사항의 목적과 중요한 포인트를 쉽게 이해할 수 있도록 요약해주세요. 각 커밋의 주요 내용을 간략하게 설명하고, 변경 사항이 프로젝트에 미치는 영향에 대해 논의해주세요. 또한, 리뷰어들이 특히 주의 깊게 살펴봐야 할 부분이 있다면, 그 부분에 대해 강조해주세요. 커밋 메시지들은 다음과 같습니다:\n${{ steps.get-commit-messages.outputs.messages }} \n\n이 정보를 바탕으로, 코드 리뷰 프로세스를 개선하고, 리뷰어들이 변경 사항의 맥락을 더 잘 이해할 수 있도록 도와주세요."
               }
             ],
             "temperature": 0.7,
-            "max_tokens": 3000
+            "max_tokens": 500
           }
           EOF
-        
+          
           response=$(curl -s -X POST "https://api.openai.com/v1/chat/completions" \
             -H "Content-Type: application/json" \
             -H "Authorization: Bearer $OPENAI_API_KEY" \
@@ -92,7 +89,7 @@ jobs:
       - name: Find and Remove Previous Comment
         if: github.event.action == 'opened'
         env:
-          GITHUB_TOKEN: ${{ secrets.DAE_GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           comment_id=$(gh pr view ${{ github.event.pull_request.number }} --repo ${{ github.repository }} --json comments -q '.comments[].id' | jq 'select(.body | contains("<!-- AI Summary Marker -->"))' | jq '.id')
           echo "$comment_id"
@@ -100,11 +97,11 @@ jobs:
             gh api -X DELETE /repos/${{ github.repository }}/issues/comments/$comment_id
           fi
 
-      
+
       - name: Update PR description
         if: github.event.action == 'opened'
         env:
-          GITHUB_TOKEN: ${{ secrets.DAE_GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           PR_DESCRIPTION=$(gh pr view ${{ github.event.pull_request.number }} --repo ${{ github.repository }} --json body -q .body)
           COMMIT_MESSAGES_FORMATTED=$(echo "${{ steps.get-commit-messages.outputs.messages }}" | sed 's/%0A/\n/g')
@@ -143,11 +140,11 @@ jobs:
 
           gh pr edit ${{ github.event.pull_request.number }} --repo ${{ github.repository }} --body "$UPDATED_DESCRIPTION"
 
-          
+
       - name: Update PR description with markers
         if: (github.event.action == 'synchronize' || github.event.action == 'reopened')
         env:
-          GITHUB_TOKEN: ${{ secrets.DAE_GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           # 기존 PR 설명 가져오기
           PR_DESCRIPTION=$(gh pr view ${{ github.event.pull_request.number }} --repo ${{ github.repository }} --json body -q .body)
