--- a/.github/workflows/aaa.yml
+++ b/.github/workflows/aaa.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: Setup environment
           run: |
-            echo "HEAD_REF=${{ github.head_ref }}" >ㅋ $GITHUB_ENV
+            echo "HEAD_REF=${{ github.head_ref }}" >> $GITHUB_ENV
             echo "BASE_REF=${{ github.base_ref }}" >> $GITHUB_ENV
 
       - name: Get Commit Messages
