--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,8 +15,12 @@ jobs:
 
       - name: Setup environment
         run: |
-          echo "HEAD_REF=${{ github.head_ref }}" >> $GITHUB_ENV
-          echo "BASE_REF=${{ github.base_ref }}" >> $GITHUB_ENV
+          echo "HEAD_REF<<EOF
+          ${{ github.head_ref }}
+          EOF" >> $GITHUB_ENV
+          echo "BASE_REF<<EOF
+          ${{ github.base_ref }}
+          EOF" >> $GITHUB_ENV
 
       - name: Get Commit Messages
         id: get-commit-messages
