--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,22 +13,29 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup environment
-        run: |
-          echo "HEAD_REF=${{ github.head_ref }}" >> $GITHUB_ENV
-          echo "BASE_REF=${{ github.base_ref }}" >> $GITHUB_ENV
+      # - name: Setup environment
+      #   run: |
+      #     echo "HEAD_REF=${{ github.head_ref }}" >> $GITHUB_ENV
+      #     echo "BASE_REF=${{ github.base_ref }}" >> $GITHUB_ENV
 
-      - name: Validate branch names
-        run: |
-          if [[ "$HEAD_REF" =~ ^(feature/|bugfix/|hotfix/) ]] && [[ "$BASE_REF" == "develop" || "$BASE_REF" == "master" ]]; then
-            echo "Branch names are valid."
-          else
-            echo "Invalid branch names detected."
-            exit 1
-          fi
+      - name: Validate refs
         env:
           HEAD_REF: ${{ github.head_ref }}
           BASE_REF: ${{ github.base_ref }}
+        run: |
+          # 정규식으로 HEAD_REF와 BASE_REF 검증
+          if ! [[ "$HEAD_REF" =~ ^[a-zA-Z0-9_-]+$ ]]; then
+            echo "HEAD_REF is invalid"
+            exit 1
+          fi
+          if ! [[ "$BASE_REF" =~ ^[a-zA-Z0-9_-]+$ ]]; then
+            echo "BASE_REF is invalid"
+            exit 1
+          fi
+  
+          # 환경 변수로 설정
+          echo "HEAD_REF=$HEAD_REF" >> $GITHUB_ENV
+          echo "BASE_REF=$BASE_REF" >> $GITHUB_ENV
 
       - name: Get Commit Messages
         id: get-commit-messages
