--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,17 +13,12 @@ jobs:
         with:
           fetch-depth: 0
 
-      # - name: Setup environment
-      #   run: |
-      #     echo "HEAD_REF=${{ github.head_ref }}" >> $GITHUB_ENV
-      #     echo "BASE_REF=${{ github.base_ref }}" >> $GITHUB_ENV
-
       - name: Validate refs
         env:
           HEAD_REF: ${{ github.head_ref }}
           BASE_REF: ${{ github.base_ref }}
         run: |
-          if ! [[ "$HEAD_REF" =~ ^[a-zA-Z0-9_-]+$ ]]; then
+          if ! [[ "$HEAD_REF" =~ ^[a-zA-Z0-9_-/]+$ ]]; then
             echo "HEAD_REF is invalid"
             exit 1
           fi
@@ -31,14 +26,14 @@ jobs:
             echo "BASE_REF is invalid"
             exit 1
           fi
-   
+  
           echo "HEAD_REF=$HEAD_REF" >> $GITHUB_ENV
           echo "BASE_REF=$BASE_REF" >> $GITHUB_ENV
 
       - name: Get Commit Messages
         id: get-commit-messages
         run: |
-          commit_messages=$(git log --reverse --format='%s%n%n%b%n₩₩₩' "origin/${BASE_REF}..origin/${HEAD_REF}")
+          commit_messages=$(git log --reverse --format='%s%n%n%b%n₩₩₩' "origin/$BASE_REF..origin/$HEAD_REF")
           echo "$commit_messages"
           
           # Markdown 형식으로 포맷팅합니다.
