--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -22,7 +22,7 @@ jobs:
             echo "HEAD_REF is invalid"
             exit 1
           fi
-          if [[ "$BASE_REF" != "develop" && "$BASE_REF" != "master" ]]; then
+          if [[ "$BASE_REF" != "develop" && "$BASE_REF" != "master" && "$BASE_REF" != "main" ]]; then
             echo "BASE_REF is invalid"
             exit 1
           fi
